# fastvapi

./: .env.example  .gitignore  Dockerfile  Makefile  Readme.md  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  setup.py
app/: config.py  main.py
app/api/realtime/: openai.py
app/core/: cache.py
config/: ngrok.yml.template  redis.conf
